--- a/css/bsns_check.css
+++ b/css/bsns_check.css
@@ -39,7 +39,6 @@ nav img{
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.24);
     padding: 30px;
-    padding-top: 10px;
     text-align: center;
 }
 
@@ -65,7 +64,38 @@ nav img{
 }
 
 #check_product{
-    padding: 60px;
     height: fit-content;
-    margin-top: 40px;
+}
+
+#prod {
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+#prod td, #prod th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    
+}
+  
+#t1{
+    width: 20%;
+}
+
+#t2,#t3{
+    width: 40%;
+}
+
+#prod tr:nth-child(even){background-color: #f2f2f2;}
+  
+#prod tr:hover {background-color: #ddd;}
+  
+#prod th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgba(203, 243, 254, 0.82);
+    color: black;
 }
