--- a/css/bsns_success.css
+++ b/css/bsns_success.css
@@ -15,36 +15,6 @@ body{
     background-size: cover;
 }
 
-#file, #l_txn, #sub, #but{
-    margin: 10px;
-    width: 450px;
-    height: 40px;
-    padding-left: 10px;
-    border: none;
-    background: rgba(203, 243, 254, 0.82);
-    color: black;
-    border-radius: 10px;
-    box-shadow: 0px 3px 15px rgba(0,0,0,0.24);
-    font-size: large;
-}
-
-#l_txn{
-    margin-top: 10px;
-}
-
-#txn{
-    display:none;
-}
-
-#but{
-    width: 300px;
-    cursor: pointer;
-}
-
-#sno_form{
-    margin-top: 50px;
-    height: fit-content;
-}
 
 #navbar{
     height: 60px;
@@ -62,12 +32,14 @@ nav img{
 #wrap{
     background: rgba(255, 255, 255, 0.71);
     width: 1100px;
-    height: 420px;
+    height: 480px;
     margin-left: 220px;
     margin-top: 100px;
     position: absolute;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.24);
+    padding: 30px;
+    padding-top: 10px;
     text-align: center;
 }
 
@@ -75,6 +47,24 @@ nav img{
     font-size: 20px;
     height: fit-content;
     position: relative;
-    margin-top: 20px;
     color: rgba(0,0,0,0.7);
+    margin-top: 20px;
+}
+
+#qr{
+    width: 250px;
+    height: 250px;
+}
+
+button{
+    margin: 10px;
+    width: 450px;
+    height: 40px;
+    padding-left: 10px;
+    border: none;
+    background: rgba(203, 243, 254, 0.82);
+    color: black;
+    border-radius: 10px;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.24);
+    font-size: large;
 }
